--- a/profiles/templates/profiles/profile.html
+++ b/profiles/templates/profiles/profile.html
@@ -42,4 +42,5 @@
 {% block postload_js %}
 {{ block.super }}
 <script src="{% static 'profiles/js/hideShowContent.js' %}"></script>
+<script src="{% static 'profiles/js/bootstrapInit.js' %}"></script>
 {% endblock %}
