--- a/profiles/templates/profiles/profile-details.html
+++ b/profiles/templates/profiles/profile-details.html
@@ -1,12 +1,13 @@
 <div class="row">
-    <div id="order-2" class="col-md-5 p-3 p-lg-5 pt-lg-3 my-profile__image">
-        {% if profile.img_url %}
-            <img src="{{ profile.img_url }}" alt="User Profile Pic" class="mt-5">
-        {% else %}
-        <a id="example" href="#" data-bs-toggle="tooltip" title="" data-bs-placement="bottom" data-bs-original-title="Change profile picture">
-            <img src="{{ MEDIA_URL }}default-profile-pic.png" alt="Default Profile Pic" class="mt-5">
-        </a>
-        {% endif %}
+    <div id="order-2" class="col-md-5 p-3 p-lg-5 pt-lg-3 my-profile__image" >
+        <div id="tooltip-js" data-bs-toggle="tooltip" title="" data-bs-placement="bottom" data-bs-original-title="Change profile picture">
+            {% if profile.img_url %}
+                <img src="{{ profile.img_url }}" alt="User Profile Pic" class="mt-5">
+            {% else %}
+                <img src="{{ MEDIA_URL }}default-profile-pic.png" alt="Default Profile Pic" class="mt-5">
+            {% endif %}
+        </div>
+
     </div>
     <div id="order-1" class="col-md-7 p-3 p-lg-5 pt-lg-3 form-custom my-profile__form">
         <h4 class="text-dark fw-bolder fs-5 mt-5">My details</h4>
@@ -19,7 +20,7 @@
         <div class="account-settings">
             <h4 class="text-dark fw-bolder fs-5 mt-5">Settings</h4>
             <p><a href="{% url 'account_change_password' %}">Change Password</a></p>
-            <p><a href="submit-btn anchors" data-bs-target="#exampleModal" data-bs-toggle="modal">Deactive
+            <p><a href="submit-btn anchors" data-bs-target="#exampleModal" data-bs-toggle="modal">Deactivate
                 account</a></p>
         </div>
     </div>
@@ -31,15 +32,15 @@
     <div class="modal-dialog">
         <div class="modal-content">
             <div class="modal-header">
-                <h5 class="modal-title" id="exampleModalLabel">Modal title</h5>
-                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                <h5 class="modal-title" id="exampleModalLabel">Delete account</h5>
+                <button type="button" class="btn-close btn-outline-green" data-bs-dismiss="modal" aria-label="Close"></button>
             </div>
             <div class="modal-body">
-                ...
+                Are you sure you want to delete your account?
             </div>
             <div class="modal-footer">
-                <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
-                <a href="{% url 'delete_profile' request.user.username %}" class="btn btn-primary">Deactive account</a>
+                <button type="button" class="btn btn-green fw-bolder" data-bs-dismiss="modal">No, I don't want to cancel my account</button>
+                <a href="{% url 'delete_profile' request.user.username %}" class="btn btn-outline-green fw-bolder">Yes, deactivate account</a>
             </div>
         </div>
     </div>
