--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -13,8 +13,12 @@
                 <p class="fs-5 mb-4">Enabling communities to share and promote local events, activities, services and
                     businesses.</p>
                 <div class="d-grid gap-2 d-sm-flex justify-content-sm-center">
-                    <a href="{% url 'account_signup' %}"><button type="button" class="btn btn-green btn-lg px-4 me-sm-3 fw-bold">Sign up</button></a>
-                    <a href="{% url 'account_login' %}"><button type="button" class="btn btn-outline-light btn-lg px-4">Log in</button></a>
+                    {% if request.user.is_authenticated %}
+                        <a href="{% url 'account_signup' %}"><button type="button" class="btn btn-outline-green btn-lg px-4 me-sm-3 fw-bold">Add event</button></a>
+                    {% else %}
+                        <a href="{% url 'account_signup' %}"><button type="button" class="btn btn-outline-green btn-lg px-4 me-sm-3 fw-bold">Sign up</button></a>
+                        <a href="{% url 'account_login' %}"><button type="button" class="btn btn-outline-light btn-lg px-4">Log in</button></a>
+                    {% endif %}
                 </div>
             </div>
         </div>
