--- a/static/css/_form.scss
+++ b/static/css/_form.scss
@@ -42,6 +42,7 @@
     color: $sec-colour;
     text-decoration: none;
     font-weight: 600; /* fw-bolder */
+    font-size: 0.9rem;
   }
 
   .btn-outline-sec-colour {
