--- a/templates/allauth/socialaccount/authentication_error.html
+++ b/templates/allauth/socialaccount/authentication_error.html
@@ -4,8 +4,21 @@
 
 {% block head_title %}{% trans "Social Network Login Failure" %}{% endblock %}
 
-{% block content %}
-<h1>{% trans "Social Network Login Failure" %}</h1>
+{% block inner_content %}
 
-<p>{% trans "An error occurred while attempting to login via your social network account." %}</p>
+<h2 class="text-center page-header-bg">{% trans "Social Network Login Failure" %}</h2>
+
+<div id="authentication" class="container-fluid form-custom">
+  <div class="row pb-0 pe-lg-0">
+    <div class="col-12 form-custom__align-center">
+        <p>{% trans "An error occurred while attempting to login via your social network account." %}</p>
+        <a href="{% url 'home' %}">
+            <button type="submit">Back to the site</button>
+        </a>
+    </div>
+  </div>
+</div>
+
+
+
 {% endblock %}
