--- a/templates/allauth/socialaccount/base.html
+++ b/templates/allauth/socialaccount/base.html
@@ -1,1 +1,6 @@
-{% extends "account/base.html" %}
+{% extends "base.html" %}
+
+{% block content %}
+        {% block inner_content %}
+        {% endblock %}
+{% endblock %}
