--- a/templates/allauth/socialaccount/login_cancelled.html
+++ b/templates/allauth/socialaccount/login_cancelled.html
@@ -4,12 +4,17 @@
 
 {% block head_title %}{% trans "Login Cancelled" %}{% endblock %}
 
-{% block content %}
+{% block inner_content %}
 
-<h1>{% trans "Login Cancelled" %}</h1>
+<h2 class="text-center page-header-bg">{% trans "Login Cancelled" %}</h2>
 
-{% url 'account_login' as login_url %}
+<div id="authentication" class="container-fluid form-custom">
+  <div class="row pb-0 pe-lg-0">
+    <div class="col-12 form-custom__align-center">
+        {% url 'account_login' as login_url %}
 
-<p>{% blocktrans %}You decided to cancel logging in to our site using one of your existing accounts. If this was a mistake, please proceed to <a href="{{login_url}}">sign in</a>.{% endblocktrans %}</p>
-
+        <p>{% blocktrans %}You decided to cancel logging in to our site using one of your existing accounts. If this was a mistake, please proceed to <a href="{{login_url}}">sign in</a>.{% endblocktrans %}</p>
+    </div>
+  </div>
+</div>
 {% endblock %}
