--- a/templates/allauth/socialaccount/snippets/provider_list.html
+++ b/templates/allauth/socialaccount/snippets/provider_list.html
@@ -3,18 +3,40 @@
 {% get_providers as socialaccount_providers %}
 
 {% for provider in socialaccount_providers %}
+
 {% if provider.id == "openid" %}
-{% for brand in provider.get_brands %}
-<li>
-  <a title="{{brand.name}}" 
-     class="socialaccount_provider {{provider.id}} {{brand.id}}" 
-     href="{% provider_login_url provider.id openid=brand.openid_url process=process %}"
-     >{{brand.name}}</a>
-</li>
-{% endfor %}
+    {% for brand in provider.get_brands %}
+        <div>
+          <a title="{{brand.name}}"
+             class="socialaccount_provider {{provider.id}} {{brand.id}}"
+             href="{% provider_login_url provider.id openid=brand.openid_url process=process %}"
+             >{{brand.name}}</a>
+        </div>
+    {% endfor %}
 {% endif %}
-<li>
-  <a title="{{provider.name}}" class="socialaccount_provider {{provider.id}}" 
-     href="{% provider_login_url provider.id process=process scope=scope auth_params=auth_params %}">{{provider.name}}</a>
-</li>
+
+<div>
+    {% if provider.name == "Facebook" %}
+        <a title="{{provider.name}}" class="btn btn-sm my-2 btn-primary socialaccount_provider {{provider.id}}"
+         href="{% provider_login_url provider.id process=process scope=scope auth_params=auth_params %}">
+          Log in with <i class="fab fa-facebook-f"></i> {{provider.name}}
+        </a>
+    {% elif provider.name == "Twitter" %}
+        <a title="{{provider.name}}" class="btn btn-sm my-2 btn-info socialaccount_provider {{provider.id}}"
+           href="{% provider_login_url provider.id process=process scope=scope auth_params=auth_params %}">
+            Log in with <i class="fab fa-twitter"></i> {{provider.name}}
+        </a>
+    {% elif provider.name == "Google" %}
+        <a title="{{provider.name}}" class="btn btn-sm my-2 btn-danger socialaccount_provider {{provider.id}}"
+           href="{% provider_login_url provider.id process=process scope=scope auth_params=auth_params %}">
+            Log in with <i class="fab fa-google"></i> {{provider.name}}
+        </a>
+    {% else %}
+        <a title="{{provider.name}}" class="btn btn-sm my-2 btn-secondary socialaccount_provider {{provider.id}}"
+           href="{% provider_login_url provider.id process=process scope=scope auth_params=auth_params %}">
+            Log in with {{provider.name}}
+        </a>
+    {% endif %}
+</div>
+
 {% endfor %}
