--- a/profiles/templates/profiles/profile-details.html
+++ b/profiles/templates/profiles/profile-details.html
@@ -1,17 +1,16 @@
 <div class="row">
     <div id="order-2" class="col-md-5 p-3 p-lg-5 pt-lg-3 my-profile__image" >
         <div id="tooltip-js" data-bs-toggle="tooltip" title="" data-bs-placement="bottom" data-bs-original-title="Change profile picture">
-            {% if profile.img_url %}
-                <img src="{{ profile.img_url }}" alt="User Profile Pic" class="mt-5">
+            {% if profile.profile_pic %}
+                <img src="{{ profile.profile_pic.url }}" alt="User Profile Pic" class="mt-5">
             {% else %}
                 <img src="{{ MEDIA_URL }}default-profile-pic.png" alt="Default Profile Pic" class="mt-5">
             {% endif %}
         </div>
-
     </div>
     <div id="order-1" class="col-md-7 p-3 p-lg-5 pt-lg-3 form-custom my-profile__form">
         <h4 class="text-dark fw-bolder fs-5 mt-5">My details</h4>
-        <form action="{% url 'profile' %}" method="POST">
+        <form action="{% url 'profile' %}" method="POST" enctype="multipart/form-data">
             {% csrf_token %}
             {{ form|crispy }}
             <button>Update profile</button>
