Change layout of crispy form under account

--- a/profiles/templates/profiles/profile-settings.html
+++ b/profiles/templates/profiles/profile-settings.html
@@ -14,15 +14,15 @@
     <div class="modal-dialog">
         <div class="modal-content">
             <div class="modal-header">
-                <h5 class="modal-title" id="exampleModalLabel">Delete account</h5>
+                <h5 class="modal-title fw-bolder" id="exampleModalLabel">Delete account</h5>
                 <button type="button" class="btn-close btn-outline-green" data-bs-dismiss="modal" aria-label="Close"></button>
             </div>
             <div class="modal-body">
                 Are you sure you want to delete your account?
             </div>
             <div class="modal-footer">
-                <button type="button" class="btn btn-green fw-bolder" data-bs-dismiss="modal">No, I don't want to cancel my account</button>
-                <a href="{% url 'delete_profile' request.user.username %}" class="btn btn-outline-green fw-bolder">Yes, deactivate account</a>
+                <button type="button" class="btn btn-green" data-bs-dismiss="modal">No, I don't want to cancel my account</button>
+                <a href="{% url 'delete_profile' request.user.username %}" class="btn btn-outline-green">Yes, deactivate account</a>
             </div>
         </div>
     </div>
