--- a/profiles/templates/profiles/profile-details.html
+++ b/profiles/templates/profiles/profile-details.html
@@ -1,19 +1,30 @@
-<div class="row">
-    <div id="order-2" class="col-md-5 p-3 p-lg-5 pt-lg-3 my-profile__image" >
-        <div id="tooltip-js" data-bs-toggle="tooltip" title="" data-bs-placement="bottom" data-bs-original-title="Change profile picture">
+<form action="{% url 'profile' %}" method="POST" enctype="multipart/form-data">
+    {% csrf_token %}
+    <div class="row form-custom">
+        <!-- Profile picture-->
+        <div id="order-2" class="col-md-5 p-3 p-lg-5 pt-lg-3 my-profile__image">
             {% if profile.profile_pic %}
-                <img src="{{ profile.profile_pic.url }}" alt="User Profile Pic" class="mt-5">
+                <img src="{{ profile.profile_pic.url }}" alt="User Profile Pic">
             {% else %}
-                <img src="{{ MEDIA_URL }}default-profile-pic.png" alt="Default Profile Pic" class="mt-5">
-            {% endif %}
+            <img src="{{ MEDIA_URL }}default-profile-pic.png" alt="Default Profile Pic">
+                {% endif %}
+            {{ form.profile_pic|as_crispy_field }}
         </div>
+        <!-- User information -->
+        <div id="order-1" class="col-md-7 p-3 p-lg-5 p-md-4">
+            <h4 class="text-dark fw-bolder fs-5 mt-4">My details</h4>
+                <div class="form-group">
+                    {{ form.full_name|as_crispy_field }}
+                </div>
+                <div class="form-group">
+                    {{ form.email_address|as_crispy_field }}
+                </div>
+                <div class="form-group">
+                    {{ form.bio|as_crispy_field }}
+                </div>
+            <button type="submit" class="mt-4">Update profile</button>
+        </div>
+
     </div>
-    <div id="order-1" class="col-md-7 p-3 p-lg-5 p-md-4 form-custom">
-        <h4 class="text-dark fw-bolder fs-5 mt-4">My details</h4>
-        <form action="{% url 'profile' %}" method="POST" enctype="multipart/form-data">
-            {% csrf_token %}
-            {{ form|crispy }}
-            <button>Update profile</button>
-        </form>
-    </div>
-</div>
+</form>
+
