--- a/static/css/_form.scss
+++ b/static/css/_form.scss
@@ -75,8 +75,8 @@
     font-size: 1rem;
     line-height: 1.5;
     border-radius: .3rem;
-    margin-top: .75rem !important;
-    margin-bottom: .75rem !important;
+    margin-top: .75rem;
+    margin-bottom: .75rem;
 
     /* standard bootstrap btn transitions */
     transition: color .15s ease-in-out, background-color .15s ease-in-out, border-color .15s ease-in-out, box-shadow .15s ease-in-out;
