--- a/templates/allauth/account/email.html
+++ b/templates/allauth/account/email.html
@@ -57,6 +57,9 @@
                     <button name="action_add" type="submit">{% trans "Add E-mail" %}</button>
                 </form>
               {% endif %}
+            <div class="my-4">
+                <a href="{% url 'profile' %}" class="btn btn-outline-sec-colour btn-md px-4">Return to Profile</a>
+            </div>
         </div>
     </div>
 </div>
