--- a/profiles/templates/profiles/profile.html
+++ b/profiles/templates/profiles/profile.html
@@ -34,7 +34,7 @@
             {% include './profile-details.html' %}
         </div>
         <!-- My posts -->
-        <div class="tab-pane fade" id="posts" role="tabpanel" aria-labelledby="posts-tab">
+        <div class="tab-pane fade my-posts" id="posts" role="tabpanel" aria-labelledby="posts-tab">
             {% include './profile-posts.html' %}
         </div>
         <!-- Settings -->
