--- a/events/templates/events/add-event.html
+++ b/events/templates/events/add-event.html
@@ -1,9 +1,39 @@
 {% extends "base.html" %}
 {% load static %}
+{% load crispy_forms_field %}
 
 {% block page_header %}
 <h2 class="text-center page-header-bg">Create New Event</h2>
 {% endblock %}
 
 {% block content %}
+<form action="{% url 'add_event' %}" method="POST" enctype="multipart/form-data">
+    {% csrf_token %}
+    <div class="row form-custom">
+        <div class="col-md-12 p-3 p-lg-5 pt-lg-3">
+            <div class="form-group">
+                {{ form.title|as_crispy_field }}
+            </div>
+            <div class="form-group">
+                {{ form.description|as_crispy_field }}
+            </div>
+            <div class="form-group">
+                {{ form.event_date|as_crispy_field }}
+            </div>
+            <div class="form-group">
+                {{ form.event_time|as_crispy_field }}
+            </div>
+            <div class="form-group">
+                {{ form.event_price|as_crispy_field }}
+            </div>
+            <div class="form-group">
+                {{ form.event_contact|as_crispy_field }}
+            </div>
+            <div class="form-group">
+                {{ form.event_category|as_crispy_field }}
+            </div>
+            <button type="submit" class="mt-4">Create event</button>
+        </div>
+    </div>
+</form>
 {% endblock %}
