Remove height from image container auth pages

--- a/templates/allauth/account/signup.html
+++ b/templates/allauth/account/signup.html
@@ -8,7 +8,7 @@
 {% block inner_content %}
 
 <div id="authentication" class="container form-custom">
-    <div class="row pb-0 pe-lg-0 align-items-center">
+    <div class="row pb-0 pe-lg-0">
         <!-- Left panel -->
         <div class="col-lg-7 p-3 p-lg-5 pt-lg-3 auth-left-panel">
 
