--- a/static/css/style.css
+++ b/static/css/style.css
@@ -76,7 +76,13 @@
   margin-top: 1.5rem;
   /* mt-4 */
 }
-.form-custom input {
+.form-custom .helper-text {
+  font-size: 0.8rem;
+}
+.form-custom input,
+.form-custom select,
+.form-custom textarea {
+  width: 100%;
   background-color: rgba(108, 117, 125, 0.1);
   border-color: rgba(108, 117, 125, 0.05);
   color: #6c757d;
@@ -84,13 +90,17 @@
   padding: 0.825rem 1.5rem;
   border-radius: 0.3rem;
 }
+.form-custom textarea {
+  height: 5rem;
+}
 .form-custom label:not([for=id_remember]) {
   padding-top: 1.25rem;
   /* pt-4 */
   font-weight: 600;
   /* fw-bolder */
 }
-.form-custom input::placeholder {
+.form-custom input::placeholder,
+.form-custom textarea::placeholder {
   color: rgba(108, 117, 125, 0.5);
 }
 .form-custom .control-group {
@@ -235,6 +245,17 @@
   display: none;
 }
 
+.my-posts__btn-container {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.my-posts__img {
+  background: url("/media/add-event.png") no-repeat center center;
+  background-size: contain;
+  min-height: 10rem;
+}
+
 #authentication {
   display: flex;
   flex-direction: column;
@@ -242,16 +263,6 @@
 
 .auth-left-panel {
   background-color: #20D489;
-}
-@media (min-width: 48rem) {
-  .auth-left-panel {
-    height: 70vh;
-  }
-}
-@media (min-width: 64rem) {
-  .auth-left-panel {
-    height: 120vh;
-  }
 }
 .auth-left-panel__img {
   background: url("/media/bg-auth.png") no-repeat center center;
