Add user events to profile page

--- a/profiles/templates/profiles/profile-posts.html
+++ b/profiles/templates/profiles/profile-posts.html
@@ -24,8 +24,7 @@
                     </span>
                         </div>
                         <div>
-                            <a href="#" class="fs-4 text-white text-hover-primary fw-bolder">Yoga classes in the
-                                park</a>
+                            <a href="#" class="fs-4 text-white text-hover-primary fw-bolder">{{ events }}</a>
                             <div class="fs-7 text-white opacity-75 fw-bold mt-1">Sunday, 10am</div>
                         </div>
                     </div>
