--- a/static/css/_form.scss
+++ b/static/css/_form.scss
@@ -34,7 +34,8 @@
   }
 
   input::placeholder,
-  textarea::placeholder {
+  textarea::placeholder,
+  select::placeholder {
     color: rgba($gray, 0.5);
   }
 
