--- a/profiles/templates/profiles/profile-posts.html
+++ b/profiles/templates/profiles/profile-posts.html
@@ -1,4 +1,5 @@
 <div class="container my-posts">
+    <!-- Create new event -->
     <div class="row my-5">
         <div class="col-md-7 p-3 p-lg-5 pt-lg-3">
             <div class="my-posts__img"></div>
@@ -10,30 +11,63 @@
             </a>
         </div>
     </div>
+
     <hr>
-    <div class="row">
-        <div class="col-12">
-            <h4 class="text-center page-header">My Events</h4>
-        </div>
-        <div class="col-12">
-            <div class="card card-stretch bg-danger mb-5 mb-xxl-8">
+
+    <!-- User's events -->
+    <h4 class="text-center page-header">My Events</h4>
+    <div class="row row-cols-1 row-cols-md-2 g-4">
+        {% for event in events %}
+        <div class="col">
+            <div class="card shadow-sm h-100 card-content">
                 <div class="card-body">
-                    <div class="d-flex align-items-center">
-                        <div class="symbol symbol-50px me-5">
-                        <span class="symbol-label bg-white bg-opacity-10">
-                    </span>
-                        </div>
-                        <div>
-                            <a href="#" class="fs-4 text-white text-hover-primary fw-bolder">{{ events }}</a>
-                            <div class="fs-7 text-white opacity-75 fw-bold mt-1">Sunday, 10am</div>
-                        </div>
+                    <!-- Event title -->
+                    <h5 class="card-title card-content__title py-2">{{ event.title }}</h5>
+                    <!-- Event description -->
+                    <p class="card-text text-muted">{{ event.description }}</p>
+                    <!-- Event details -->
+                    <div class="card-content__key">
+                        <p>Date:</p>
                     </div>
-                    <div class="fw-bolder text-white pt-7">
-                        <span class="d-block">Details X</span>
-                        <span class="d-block pt-2">Details Y</span>
+                    <div class="card-content__value">
+                        <p>{{ event.event_date }}</p>
+                    </div>
+                     <div class="card-content__key">
+                        <p>Time:</p>
+                    </div>
+                    <div class="card-content__value">
+                        <p>{{ event.event_time }}</p>
+                    </div>
+                    <div class="card-content__key">
+                        <p>Price:</p>
+                    </div>
+                    <div class="card-content__value">
+                        <p>{{ event.event_price }}</p>
+                    </div>
+                     <div class="card-content__key">
+                        <p>Contact:</p>
+                    </div>
+                    <div class="card-content__value">
+                        <p>{{ event.event_contact }}</p>
+                    </div>
+                    <div class="card-content__key">
+                        <p>Category:</p>
+                    </div>
+                    <div class="card-content__value">
+                        <p>{{ event.event_category }}</p>
+                    </div>
+                    <!-- Card buttons -->
+                    <div class="d-flex justify-content-between align-items-center">
+                        <div class="btn-group">
+                            <button type="button" class="btn btn-sm btn-outline-secondary">View</button>
+                            <button type="button" class="btn btn-sm btn-outline-secondary">Edit</button>
+                            <button type="button" class="btn btn-sm btn-outline-secondary">Delete</button>
+                        </div>
+                        <small class="text-muted">9 mins</small>
                     </div>
                 </div>
             </div>
         </div>
+        {% endfor %}
     </div>
 </div>
