--- a/profiles/templates/profiles/profile-posts.html
+++ b/profiles/templates/profiles/profile-posts.html
@@ -16,48 +16,56 @@
 
     <!-- User's events -->
     <h4 class="text-center page-header">My Events</h4>
-    <div class="row row-cols-1 row-cols-md-2 g-4">
+    <div class="row row-cols-1 row-cols-md-2 g-4 mb-4">
         {% for event in events %}
         <div class="col">
             <div class="card shadow-sm h-100 card-content">
                 <div class="card-body">
                     <!-- Event title -->
-                    <h5 class="card-title card-content__title py-2">{{ event.title }}</h5>
+                    <h5 class="card-title card-content__title my-3 fw-bolder">{{ event.title }}</h5>
+
                     <!-- Event description -->
                     <p class="card-text text-muted">{{ event.description }}</p>
+
+                    <!-- Event category -->
+                    <p class="pt-2"><span class="badge card-content__badge">{{ event.event_category }}</span></p>
+
                     <!-- Event details -->
-                    <div class="card-content__key">
-                        <p>Date:</p>
+                    <div class="py-3">
+                        <div class="card-content__key fw-bolder">
+                            <p>Date:</p>
+                        </div>
+                        <div class="card-content__value">
+                            <p>{{ event.event_date }}</p>
+                        </div>
+                        <div class="card-content__key fw-bolder">
+                            <p>Time:</p>
+                        </div>
+                        <div class="card-content__value">
+                            <p>{{ event.event_time }}</p>
+                        </div>
+                        <div class="card-content__key fw-bolder">
+                            <p>Location:</p>
+                        </div>
+                        <div class="card-content__value">
+                            <p>{{ event.event_location }}</p>
+                        </div>
+                        <div class="card-content__key fw-bolder">
+                            <p>Price:</p>
+                        </div>
+                        <div class="card-content__value">
+                            <p>{{ event.event_price }}</p>
+                        </div>
+                        <div class="card-content__key fw-bolder">
+                            <p>Contact:</p>
+                        </div>
+                        <div class="card-content__value">
+                            <p>{{ event.event_contact }}</p>
+                        </div>
                     </div>
-                    <div class="card-content__value">
-                        <p>{{ event.event_date }}</p>
-                    </div>
-                     <div class="card-content__key">
-                        <p>Time:</p>
-                    </div>
-                    <div class="card-content__value">
-                        <p>{{ event.event_time }}</p>
-                    </div>
-                    <div class="card-content__key">
-                        <p>Price:</p>
-                    </div>
-                    <div class="card-content__value">
-                        <p>{{ event.event_price }}</p>
-                    </div>
-                     <div class="card-content__key">
-                        <p>Contact:</p>
-                    </div>
-                    <div class="card-content__value">
-                        <p>{{ event.event_contact }}</p>
-                    </div>
-                    <div class="card-content__key">
-                        <p>Category:</p>
-                    </div>
-                    <div class="card-content__value">
-                        <p>{{ event.event_category }}</p>
-                    </div>
+
                     <!-- Card buttons -->
-                    <div class="d-flex justify-content-between align-items-center">
+                    <div class="d-flex justify-content-between align-items-center pt-3">
                         <div class="btn-group">
                             <button type="button" class="btn btn-sm btn-outline-secondary">View</button>
                             <button type="button" class="btn btn-sm btn-outline-secondary">Edit</button>
