--- a/static/css/_card.scss
+++ b/static/css/_card.scss
@@ -2,6 +2,11 @@
   &__title {
     color: $prim-colour;
   }
+
+  &__badge {
+    background-color: $sec-colour;
+  }
+
   &__key,
   &__value {
     padding-right: 0.8rem;
@@ -18,6 +23,7 @@
     margin-right: 1.2rem;
     padding-top: 0.2rem;
     vertical-align: top;
+    font-size: 0.9rem;
   }
 
   &__value {
