Replace container-fluid with container and add offset to cols

--- a/templates/allauth/account/password_change.html
+++ b/templates/allauth/account/password_change.html
@@ -8,9 +8,9 @@
 
 <h2 class="text-center page-header-bg">{% trans "Change Password" %}</h2>
 
-<div id="authentication" class="container-fluid form-custom">
+<div id="authentication" class="container form-custom">
     <div class="row pb-0 pe-lg-0">
-        <div class="col-12 form-custom__align-center">
+        <div class="col-12 col-md-10 offset-md-1 form-custom__align-center">
             <form method="POST" action="{% url 'account_change_password' %}" class="password_change">
                 {% csrf_token %}
                 {{ form|crispy }}
