--- a/templates/allauth/account/password_reset_done.html
+++ b/templates/allauth/account/password_reset_done.html
@@ -8,9 +8,9 @@
 {% block inner_content %}
 <h2 class="text-center page-header-bg">{% trans "Password Reset" %}</h2>
 
-<div id="authentication" class="container-fluid form-custom">
+<div id="authentication" class="container form-custom">
     <div class="row pb-0 pe-lg-0">
-        <div class="col-12 form-custom__align-center">
+        <div class="col-12 col-md-10 offset-md-1 form-custom__align-center">
             {% if user.is_authenticated %}
             {% include "account/snippets/already_logged_in.html" %}
             {% endif %}
