--- a/templates/allauth/socialaccount/authentication_error.html
+++ b/templates/allauth/socialaccount/authentication_error.html
@@ -8,9 +8,9 @@
 
 <h2 class="text-center page-header-bg">{% trans "Social Network Login Failure" %}</h2>
 
-<div id="authentication" class="container-fluid form-custom">
+<div id="authentication" class="container form-custom">
   <div class="row pb-0 pe-lg-0">
-    <div class="col-12 form-custom__align-center">
+    <div class="col-12 col-md-10 offset-md-1 form-custom__align-center">
         <p>{% trans "An error occurred while attempting to login via your social network account." %}</p>
         <a href="{% url 'home' %}">
             <button type="submit">Back to the site</button>
