--- a/templates/allauth/account/email_confirm.html
+++ b/templates/allauth/account/email_confirm.html
@@ -10,9 +10,9 @@
 
 <h2 class="text-center page-header-bg">{% trans "Confirm E-mail Address" %}</h2>
 
-<div id="authentication" class="container-fluid form-custom">
+<div id="authentication" class="container form-custom">
     <div class="row pb-0 pe-lg-0">
-        <div class="col-12 form-custom__align-center">
+        <div class="col-12 col-md-10 offset-md-1 form-custom__align-center">
             {% if confirmation %}
 
             {% user_display confirmation.email_address.user as user_display %}
