--- a/templates/allauth/account/password_reset_from_key.html
+++ b/templates/allauth/account/password_reset_from_key.html
@@ -7,9 +7,9 @@
 
 <h2 class="text-center page-header-bg">{% if token_fail %}{% trans "Bad Token" %}{% else %}{% trans "Change Password" %}{% endif %}</h2>
 
-<div id="authentication" class="container-fluid form-custom">
+<div id="authentication" class="container form-custom">
     <div class="row pb-0 pe-lg-0">
-        <div class="col-12 form-custom__align-center">
+        <div class="col-12 col-md-10 offset-md-1 form-custom__align-center">
             {% if token_fail %}
                 {% url 'account_reset_password' as passwd_reset_url %}
                 <p>{% blocktrans %}The password reset link was invalid, possibly because it has already been used.  Please request a <a href="{{ passwd_reset_url }}">new password reset</a>.{% endblocktrans %}</p>
