--- a/templates/allauth/account/verification_sent.html
+++ b/templates/allauth/account/verification_sent.html
@@ -8,9 +8,9 @@
 
 <h2 class="text-center page-header-bg">{% trans "Verify Your E-mail Address" %}</h2>
 
-<div id="authentication" class="container-fluid form-custom">
+<div id="authentication" class="container form-custom">
     <div class="row pb-0 pe-lg-0">
-        <div class="col-12 form-custom__align-center">
+        <div class="col-12 col-md-10 offset-md-1 form-custom__align-center">
             <p>{% blocktrans %}We have sent an e-mail to you for verification. Follow the link provided to finalize the signup process. Please contact us if you do not receive it within a few minutes.{% endblocktrans %}</p>
         </div>
     </div>
