--- a/templates/allauth/account/verified_email_required.html
+++ b/templates/allauth/account/verified_email_required.html
@@ -8,9 +8,9 @@
 
 <h2 class="text-center page-header-bg">{% trans "Verify Your E-mail Address" %}</h2>
 
-<div id="authentication" class="container-fluid form-custom">
+<div id="authentication" class="container form-custom">
     <div class="row pb-0 pe-lg-0">
-        <div class="col-12 form-custom__align-center">
+        <div class="col-12 col-md-10 offset-md-1 form-custom__align-center">
             {% url 'account_email' as email_url %}
 
             <p>{% blocktrans %}This part of the site requires us to verify that
