--- a/templates/allauth/socialaccount/connections.html
+++ b/templates/allauth/socialaccount/connections.html
@@ -8,9 +8,9 @@
 
 <h2 class="text-center page-header-bg">{% trans "Account Connections" %}</h2>
 
-<div id="authentication" class="container-fluid form-custom">
+<div id="authentication" class="container form-custom">
   <div class="row pb-0 pe-lg-0">
-    <div class="col-12 form-custom__align-center">
+    <div class="col-12 col-md-10 offset-md-1 form-custom__align-center">
         {% if form.accounts %}
         <p>{% blocktrans %}You can sign in to your account using any of the following third party accounts:{% endblocktrans %}</p>
 
