--- a/templates/allauth/socialaccount/login_cancelled.html
+++ b/templates/allauth/socialaccount/login_cancelled.html
@@ -8,9 +8,9 @@
 
 <h2 class="text-center page-header-bg">{% trans "Login Cancelled" %}</h2>
 
-<div id="authentication" class="container-fluid form-custom">
+<div id="authentication" class="container form-custom">
   <div class="row pb-0 pe-lg-0">
-    <div class="col-12 form-custom__align-center">
+    <div class="col-12 col-md-10 offset-md-1 form-custom__align-center">
         {% url 'account_login' as login_url %}
 
         <p>{% blocktrans %}You decided to cancel logging in to our site using one of your existing accounts. If this was a mistake, please proceed to <a href="{{login_url}}">sign in</a>.{% endblocktrans %}</p>
