--- a/profiles/templates/profiles/profile-posts.html
+++ b/profiles/templates/profiles/profile-posts.html
@@ -19,7 +19,7 @@
     <div class="row row-cols-1 row-cols-md-2 g-4 mb-4">
         {% for event in events %}
         <div class="col">
-            <div class="card shadow-sm h-100 card-content">
+            <div class="card shadow-sm h-100">
                 <div class="card-body">
                     <!-- Event title -->
                     <h5 class="card-title card-content__title my-3 fw-bolder">{{ event.title }}</h5>
@@ -79,11 +79,10 @@
                     <!-- Card buttons -->
                     <div class="d-flex justify-content-between align-items-center pt-3">
                         <div class="btn-group">
-                            <button type="button" class="btn btn-sm btn-outline-secondary">View</button>
-                            <button type="button" class="btn btn-sm btn-outline-secondary">Edit</button>
-                            <button type="button" class="btn btn-sm btn-outline-secondary">Delete</button>
+                            <a href="{% url 'event_detail' event.id %}"><button type="button" class="btn btn-sm btn-outline-secondary">View</button></a>
+                            <a href="{% url 'edit_event' event.id %}"><button type="button" class="btn btn-sm btn-outline-secondary">Edit</button></a>
+                            <a href=""><button type="button" class="btn btn-sm btn-outline-secondary">Delete</button></a>
                         </div>
-                        <small class="text-muted">9 mins</small>
                     </div>
                 </div>
             </div>
