Layout adjustments to add event and event detail

--- a/events/templates/events/add-event.html
+++ b/events/templates/events/add-event.html
@@ -3,7 +3,7 @@
 {% load crispy_forms_field %}
 
 {% block page_header %}
-<h2 class="text-center page-header-bg">Create New Event</h2>
+<h2 class="text-center page-header-bg">Create Event</h2>
 {% endblock %}
 
 {% block content %}
