--- a/templates/toasts/toast.html
+++ b/templates/toasts/toast.html
@@ -1,4 +1,4 @@
-<div id="js-toast" class="toast align-items-center text-white border-0" role="alert" aria-live="assertive" aria-atomic="true" data-autohide="false">
+<div id="js-toast" class="toast align-items-center text-white border-0" role="alert" aria-live="assertive" aria-atomic="true">
   <div class="d-flex">
     <div class="toast-body">
       {{ message }}
